# JWB

./: .gitignore  README.md  buildJWB.sh
antlr4-cpp-runtime-4.6-source/: README.md
antlr4-cpp-runtime-4.6-source/demo/: CMakeLists.txt  README.md
application/: CMakeLists.txt  test.java
application/antlr-for-java/: Java.g4  JavaBaseListener.cpp  JavaBaseVisitor.h  JavaLexer.cpp  JavaListener.cpp  JavaParser.cpp  JavaVisitor.cpp  JavaVisitor.h
application/inc/: accessModifier.hpp  antlrComponentsKeeper.hpp  attributeInheritanceFactorVisitor.hpp  classDescription.hpp  clusteringMetricsCalculator.hpp  clusteringMetricsListener.hpp  currentlyBuildingTree.hpp  customListener.hpp  dfsFunctions.hpp  inheritanceFactorVisitor.hpp  inheritanceTree.hpp  inheritanceTreeConstructorListener.hpp  interfaceDescription.hpp  methodDescription.hpp  metrics.hpp  metricsCalculator.hpp  node.hpp  numberOfChildrenVisitor.hpp  simpleMetricsCalculator.hpp  simpleMetricsListener.hpp  treeAttributeDescription.hpp  treeClassDescription.hpp  treeDepthWidthVisitor.hpp  treeMethodDescription.hpp  treeMetricsCalculator.hpp  treePrinterVisitor.hpp  visitor.hpp
application/inc/clusteringDescriptions/: clusteringClassDescription.hpp  clusteringInterfaceDescription.hpp  clusteringMethodDescription.hpp
application/inc/treeDescriptions/: treeInterfaceDescription.hpp  treeMethodDescription.hpp
application/inc/treeStructure/: constructInheritanceTree.hpp  currentlyBuildingTree.hpp  graphSearchFunctions.hpp  inheritanceTree.hpp  inheritanceTreeConstructorListener.hpp  node.hpp
application/inc/treeVisitors/: analyzeSimultanInhAndPolyVisitor.hpp  attributeInheritanceFactorVisitor.hpp  classNamesVisitor.hpp  inheritanceFactorVisitor.hpp  numberOfChildrenVisitor.hpp  visitor.hpp
application/runSrc/: main.cpp
application/scripts/: build.sh  buildTreeMetrics.sh  rebuild.sh  rebuildTreeMetrics.sh  remove.sh  removeTreeMetrics.sh
application/src/: CustomListener.cpp  CustomListener.h  antlrComponentsKeeper.cpp  attributeInheritanceFactorVisitor.cpp  build.sh  classDescription.cpp  clusteringMetricsCalculator.cpp  clusteringMetricsListener.cpp  currentlyBuildingTree.cpp  customListener.cpp  dfsFunctions.cpp  graphSearchFunctions.cpp  inheritanceFactorVisitor.cpp  inheritanceTree.cpp  inheritanceTreeConstructorListener.cpp  interfaceDescription.cpp  main.cpp  methodDescription.cpp  metrics.cpp  metricsCalculator.cpp  node.cpp  numberOfChildrenVisitor.cpp  rebuild.sh  remove.sh  simpleMetricsCalculator.cpp  simpleMetricsListener.cpp  treeClassDescription.cpp  treeDepthWidthVisitor.cpp  treeMethodDescription.cpp  treeMetricsCalculator.cpp  visitor.cpp
application/src/clusteringDescriptions/: clusteringClassDescription.cpp  clusteringInterfaceDescription.cpp  clusteringMethodDescription.cpp
application/src/treeDescriptions/: treeAttributeDescription.cpp  treeInterfaceDescription.cpp  treeMethodDescription.cpp
application/src/treeStructure/: constructInheritanceTree.cpp  currentlyBuildingTree.cpp  graphSearchFunctions.cpp  inheritanceTree.cpp  inheritanceTreeConstructorListener.cpp  node.cpp
application/src/treeVisitors/: analyzeSimultanInhAndPolyVisitor.cpp  attributeInheritanceFactorVisitor.cpp  classNamesVisitor.cpp  inheritanceFactorVisitor.cpp  numberOfChildrenVisitor.cpp  treePrinterVisitor.cpp  visitor.cpp
application/testExamples/: InheritanceFactorGenericTest.java  InheritanceFactorTest.java  Test.java  clusteringExample.java  cyclomaticComplexityTest.java  inheritanceFactorTest.java  mhfAndAhfTest.java  slocAndCpTest.java
boost/: README.md  build.sh
simple-application/: 1.java  CMakeLists.txt
simple-application/antlr-for-java/: JavaBaseListener.h  JavaBaseVisitor.cpp  JavaLexer.h  JavaListener.h  JavaParser.h
simple-application/example/: compile.sh  main.cpp
